--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro'
 import Banner from '../components/Banner.astro'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Servicio Servitec">
   <main>
     <Banner />
   </main>
