--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -10,11 +10,12 @@
   </div>
 
   <div
-    class="relative mx-auto max-w-screen-xl px-4 py-32 sm:px-6 lg:flex lg:justify-end lg:h-screen lg:items-center lg:px-8 animate__animated animate__fadeIn"
+    class="relative mx-auto max-w-screen-xl px-4 py-32 sm:px-6 lg:flex lg:justify-end lg:h-[70vh] lg:items-center lg:px-8 animate__animated animate__fadeIn"
   >
     <div class="max-w-xl text-center">
+      <img src="/images/Logo.png" class="h-32 m-auto mb-4 animate__animated animate__fadeInDown" />
       <h1 class="text-3xl font-extrabold sm:text-5xl animate__animated animate__fadeInDown">
-        Reparacion de calidad
+        Reparación de calidad
 
         <strong class="block font-extrabold text-primary-300"> Garantizada.</strong>
       </h1>
