add Nosotros & Reparacion components

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -52,11 +52,11 @@
       >
         <a
           class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
-          href="#">Nosotros</a
+          href="#Nosotros">Nosotros</a
         >
         <a
           class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
-          href="#">Servicios</a
+          href="#Servicios">Servicios</a
         >
         <a
           class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
