--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Banner from '../components/Banner.astro'
+import Reparacion from '../components/Reparacion.astro'
+import Nosotros from '../components/Nosotros.astro'
 ---
 
 <Layout title="Servicio Servitec">
-  <main>
-    <Banner />
-  </main>
+  <Banner />
+  <Nosotros />
+  <Reparacion />
 </Layout>
