--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,12 +9,12 @@ const { title } = Astro.props
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/Logo.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
 
@@ -25,7 +25,9 @@ const { title } = Astro.props
   </head>
   <body class="bg-primary-600 text-white" id="top">
     <Header />
-    <slot />
+    <main class="max-w-screen-3xl m-auto">
+      <slot />
+    </main>
     <Footer />
     <!-- Preline script -->
     <script is:inline src="./node_modules/preline/dist/preline.js"></script>
