--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -37,11 +37,11 @@
         class="mt-12 flex flex-wrap justify-center gap-6 md:gap-8 lg:mt-0 lg:justify-end lg:gap-12"
       >
         <li>
-          <a class="transition hover:text-slate-200" href="/"> Nosotros</a>
+          <a class="transition hover:text-slate-200" href="#Nosotros"> Nosotros</a>
         </li>
 
         <li>
-          <a class="transition hover:text-slate-200" href="/"> Servicios</a>
+          <a class="transition hover:text-slate-200" href="#Servicios"> Servicios</a>
         </li>
 
         <li>
