--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,11 @@ const { title } = Astro.props
       <slot />
     </main>
     <Footer />
-    <!-- Preline script -->
-    <script is:inline src="./node_modules/preline/dist/preline.js"></script>
   </body>
 </html>
+
+<!-- Preline script -->
+<script is:inline src="./node_modules/preline/dist/preline.js"></script>
+<!-- Flowbite script -->
+<script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
+></script>
