--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -20,14 +20,9 @@
         <strong class="block font-extrabold text-primary-300"> Garantizada.</strong>
       </h1>
 
-      <p class="mt-4 max-w-lg sm:text-xl/relaxed">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt illo tenetur fuga ducimus
-        numquam ea!
-      </p>
-
       <div class="mt-8 flex flex-wrap justify-center gap-4 text-center">
         <a
-          href="#"
+          href="#Locaciones"
           class="block w-full rounded bg-primary-300 px-12 py-3 text-sm font-medium text-white shadow hover:bg-primary-400 focus:outline-none focus:ring active:bg-primary-200 sm:w-auto"
         >
           Locaciones
