--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -60,7 +60,7 @@
         >
         <a
           class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
-          href="#">Ubicación</a
+          href="#Locaciones">Locaciones</a
         >
       </div>
     </div>
