--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from '../layouts/Layout.astro'
 import Banner from '../components/Banner.astro'
 import Reparacion from '../components/Reparacion.astro'
 import Nosotros from '../components/Nosotros.astro'
+import Locaciones from '../components/Locaciones.astro'
 ---
 
 <Layout title="Servicio Servitec">
   <Banner />
   <Nosotros />
   <Reparacion />
+  <Locaciones />
 </Layout>
