--- a/src/components/Reparacion.astro
+++ b/src/components/Reparacion.astro
@@ -61,6 +61,14 @@
                 alt="..."
               />
             </div>
+            <!-- Item 8 -->
+            <div class="hidden duration-700 ease-in-out" data-carousel-item>
+              <img
+                src="/images/locations/loc8.jpg"
+                class="absolute inset-0 h-full w-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+                alt="..."
+              />
+            </div>
           </div>
           <!-- Slider indicators -->
           <div class="absolute z-30 flex space-x-3 -translate-x-1/2 bottom-5 left-1/2">
@@ -94,6 +102,24 @@
               aria-current="false"
               aria-label="Slide 5"
               data-carousel-slide-to="4"></button>
+            <button
+              type="button"
+              class="w-3 h-3 rounded-full"
+              aria-current="false"
+              aria-label="Slide 5"
+              data-carousel-slide-to="5"></button>
+            <button
+              type="button"
+              class="w-3 h-3 rounded-full"
+              aria-current="false"
+              aria-label="Slide 6"
+              data-carousel-slide-to="6"></button>
+            <button
+              type="button"
+              class="w-3 h-3 rounded-full"
+              aria-current="false"
+              aria-label="Slide 7"
+              data-carousel-slide-to="7"></button>
           </div>
           <!-- Slider controls -->
           <button
