--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -45,7 +45,7 @@
         </li>
 
         <li>
-          <a class="transition hover:text-slate-200" href="/"> Ubicaciones</a>
+          <a class="transition hover:text-slate-200" href="#Locaciones"> Locaciones</a>
         </li>
       </ul>
     </div>
