--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -1,6 +1,6 @@
-<div class="container my-24 mx-auto md:px-6">
+<div class="container mt-24 mx-auto md:px-6">
   <!-- Section: Design Block -->
-  <section class="mb-32 text-center" id="Nosotros">
+  <section class="text-center" id="Nosotros">
     <h2 class="mb-4 text-3xl font-bold">
       Somos el centro de servicio Whirlpool, Liverpool, Palacio de hierro, Costco , entre otros.
     </h2>
