--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,15 @@ import Banner from '../components/Banner.astro'
 import Reparacion from '../components/Reparacion.astro'
 import Nosotros from '../components/Nosotros.astro'
 import Locaciones from '../components/Locaciones.astro'
+import Productos from '../components/Productos.astro'
+import Companies from '../components/Companies.astro'
 ---
 
 <Layout title="Servicio Servitec">
   <Banner />
   <Nosotros />
   <Reparacion />
+  <Companies />
+  <Productos />
   <Locaciones />
 </Layout>
