feat: add numbers

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -22,17 +22,17 @@
 
       <div class="mt-8 flex flex-wrap justify-center gap-4 text-center">
         <a
-          href="#Locaciones"
-          class="block w-full rounded bg-primary-300 px-12 py-3 text-sm font-medium text-white shadow hover:bg-primary-400 focus:outline-none focus:ring active:bg-primary-200 sm:w-auto"
+          href="tel:52722-199-56-15"
+          class="block w-full rounded bg-primary-300 px-12 py-3 text-xl font-medium text-white shadow hover:bg-primary-400 focus:outline-none focus:ring active:bg-primary-200 sm:w-auto"
         >
-          Locaciones
+          722-199-56-15
         </a>
 
         <a
-          href="#"
-          class="block w-full rounded bg-white px-12 py-3 text-sm font-medium text-primary-300 shadow hover:text-primary-400 focus:outline-none focus:ring active:text-primary-200 sm:w-auto"
+          href="tel:52722-270-30-40"
+          class="block w-full rounded bg-white px-12 py-3 text-xl font-medium text-primary-300 shadow hover:text-primary-400 focus:outline-none focus:ring active:text-primary-200 sm:w-auto hover:bg-slate-300"
         >
-          Contactanos
+          722-270-30-40
         </a>
       </div>
     </div>
