--- a/src/components/Locaciones.astro
+++ b/src/components/Locaciones.astro
@@ -24,11 +24,11 @@ const Lista = [
 ---
 
 <section class="my-8" id="Locaciones">
-  <h2 class="text-4xl text-center font-bold">Locaciones</h2>
-  <div class="grid grid-cols-2 gap-4 mt-4 px-4">
+  <h2 class="text-2xl md:text-5xl text-center font-bold">Locaciones</h2>
+  <div class="grid md:grid-cols-2 gap-4 md:gap-8 mt-4 px-4">
     {
       Lista.map((loc) => (
-        <article class="flex flex-col items-center bg-primary-700 border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl m-auto lg:w-[700px] lg:h-56">
+        <article class="flex flex-col items-center bg-primary-700 rounded-lg shadow md:flex-row  m-auto md:w-full lg:w-[700px] lg:h-56">
           <img
             class="object-cover w-full rounded-t-lg h-full md:w-48 md:rounded-none md:rounded-l-lg"
             src={`images/locations/loc${loc.image}.jpg`}
