--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -28,14 +28,30 @@
         </div>
 
         <p class="mx-auto mt-6 max-w-md text-center leading-relaxed lg:text-left">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt consequuntur amet culpa
-          cum itaque neque.
+          Reparación de calidad Garantizada.
         </p>
       </div>
 
       <ul
         class="mt-12 flex flex-wrap justify-center gap-6 md:gap-8 lg:mt-0 lg:justify-end lg:gap-12"
       >
+        <li>
+          <a
+            class="transition text-white font-bold hover:text-slate-200"
+            href="tel:52722-199-56-15"
+          >
+            722-199-56-15</a
+          >
+        </li>
+
+        <li>
+          <a
+            class="transition text-white font-bold hover:text-slate-200"
+            href="tel:52722-270-30-40"
+          >
+            722-270-30-40</a
+          >
+        </li>
         <li>
           <a class="transition hover:text-slate-200" href="#Nosotros"> Nosotros</a>
         </li>
@@ -51,7 +67,7 @@
     </div>
 
     <p class="mt-12 text-center text-sm text-gray-500 lg:text-right">
-      Copyright &copy; 2022. All rights reserved.
+      Copyright &copy; 2023. All rights reserved.
     </p>
   </div>
 </footer>
