better LG score

--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -13,17 +13,25 @@
 
     <div class="grid max-w-full items-center gap-6 md:grid-cols-2 lg:grid-cols-4">
       <div class="mb-12 lg:mb-0">
-        <img src="/images/lp.png" class="px-6 dark:brightness-150 md:px-12" alt="Liverpool" />
+        <img
+          src="/images/lp.png"
+          class="px-6 dark:brightness-150 md:px-12 h-auto"
+          alt="Liverpool"
+        />
       </div>
 
       <div class="mb-12 lg:mb-0">
-        <img src="/images/Costco.png" class="px-6 dark:brightness-150 md:px-12" alt="Costco" />
+        <img
+          src="/images/Costco.png"
+          class="px-6 dark:brightness-150 md:px-12 h-auto"
+          alt="Costco"
+        />
       </div>
 
       <div class="mb-12 lg:mb-0">
         <img
           src="/images/palacio.png"
-          class="px-6 dark:brightness-150 md:px-12"
+          class="px-6 dark:brightness-150 md:px-12 h-auto"
           alt="Nike - logo"
         />
       </div>
@@ -31,7 +39,7 @@
       <div class="mb-12 lg:mb-0">
         <img
           src="/images/whirlpool.png"
-          class="px-6 dark:brightness-150 md:px-12"
+          class="px-6 dark:brightness-150 md:px-12 h-auto"
           alt="Ikea - logo"
         />
       </div>
