--- a/src/components/Productos.astro
+++ b/src/components/Productos.astro
@@ -21,7 +21,7 @@ const logos = [
             <img
               src={`./images/products/${logo}`}
               alt={logo}
-              class="h-64 md:h-full object-contain"
+              class="h-64 md:h-full w-auto object-contain"
             />
           </div>
         ))
@@ -32,7 +32,7 @@ const logos = [
             <img
               src={`./images/products/${logo}`}
               alt={logo}
-              class="h-64 md:h-full  object-contain"
+              class="h-64 md:h-full w-auto object-contain"
             />
           </div>
         ))
@@ -43,7 +43,7 @@ const logos = [
             <img
               src={`./images/products/${logo}`}
               alt={logo}
-              class="h-64 md:h-full  object-contain"
+              class="h-64 md:h-full w-auto object-contain"
             />
           </div>
         ))
