--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -7,7 +7,7 @@
   >
     <div class="flex items-center justify-between">
       <a class="flex-none text-xl font-semibold dark:text-white" href="#">
-        <img src="/images/Logo.png" class="h-16" />
+        <img src="/images/Logo.png" class="h-16" alt="Servitec Logo" />
       </a>
       <div class="sm:hidden">
         <button
@@ -50,18 +50,9 @@
       <div
         class="flex flex-col gap-5 mt-5 sm:flex-row sm:items-center sm:justify-end sm:mt-0 sm:pl-5"
       >
-        <a
-          class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
-          href="#Nosotros">Nosotros</a
-        >
-        <a
-          class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
-          href="#Servicios">Servicios</a
-        >
-        <a
-          class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500"
-          href="#Locaciones">Locaciones</a
-        >
+        <a class="font-medium text-slate-200 hover:text-gray-400" href="#Nosotros">Nosotros</a>
+        <a class="font-medium text-slate-200 hover:text-gray-400" href="#Servicios">Servicios</a>
+        <a class="font-medium text-slate-200 hover:text-gray-400" href="#Locaciones">Locaciones</a>
       </div>
     </div>
   </nav>
