--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,11 @@ const { title } = Astro.props
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/images/Logo.png" />
     <meta name="generator" content={Astro.generator} />
+    <meta
+      name="description"
+      content="Somos una empresa con más de 30 años de experiencia, ofrecemos garantía por escrito y la mejor atención en cada uno de nuestros servicios.
+Contamos con sucursales en el interior de la república y refaccionarias."
+    />
     <title>{title}</title>
 
     <link
