--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="bg-primary-700 text-slate-400 mt-10">
+<footer class="bg-primary-700 text-slate-300 mt-10">
   <div class="relative mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8 lg:pt-24">
     <div class="absolute end-4 top-4 sm:end-6 sm:top-6 lg:end-8 lg:top-8">
       <a
@@ -24,7 +24,7 @@
     <div class="lg:flex lg:items-end lg:justify-between">
       <div>
         <div class="flex justify-center text-white lg:justify-start">
-          <img src="/images/Logo.png" class="h-32" />
+          <img src="/images/Logo.png" class="h-32" alt="Servitec Logo" />
         </div>
 
         <p class="mx-auto mt-6 max-w-md text-center leading-relaxed lg:text-left">
@@ -66,7 +66,7 @@
       </ul>
     </div>
 
-    <p class="mt-12 text-center text-sm text-gray-500 lg:text-right">
+    <p class="mt-12 text-center text-sm text-slate-200 lg:text-right">
       Copyright &copy; 2023. All rights reserved.
     </p>
   </div>
