--- a/src/components/Locaciones.astro
+++ b/src/components/Locaciones.astro
@@ -35,7 +35,7 @@ const Lista = [
             alt={loc.name}
           />
           <div class="flex flex-col justify-between p-4 leading-normal">
-            <h5 class="mb-2 text-2xl font-bold tracking-tight ">{loc.name}</h5>
+            <h5 class="mb-2 md:ml-8 text-2xl font-bold tracking-tight ">{loc.name}</h5>
           </div>
         </article>
       ))
