Add Tachyon label

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -70,4 +70,7 @@
       Copyright &copy; 2023. All rights reserved.
     </p>
   </div>
+  <p class="text-typo-200 text-center my-10">
+    <a href="https://www.tachyondevelopers.com/" target="_blank">Desarrollado por Tachyon</a>
+  </p>
 </footer>
